created CSS file, added some styiling

--- a/lib/views/game.erb
+++ b/lib/views/game.erb
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<head> </head>
-<body>
-	<form action="/outcome" class="inline">
-		<button type="submit">Rock</button>
+<head><link type="text/css" rel="stylesheet" href="stylesheet.css"/></head>
+<body class= "icon_choice">
+	<form action="/outcome">
+		<button class="rock_button" type="submit">Rock</button>
 	</form>
-	<form action="/outcome" class="inline">
-		<button type="submit">Paper</button>
+	<form action="/outcome">
+		<button class="paper_button" type="submit">Paper</button>
 	</form>
-	<form action="/outcome" class="inline">
-		<button type="submit">Scissors</button>
+	<form action="/outcome">
+		<button class= "scissor_button" type="submit">Scissors</button>
 	</form>
 </body>
 </html>
