--- a/lib/views/game.erb
+++ b/lib/views/game.erb
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-<head><link type="text/css" rel="stylesheet" href="stylesheet.css"/></head>
-<body class= "icon_choice">
-	<form action="/outcome">
-		<button class="rock_button" type="submit">Rock</button>
-	</form>
-	<form action="/outcome">
-		<button class="paper_button" type="submit">Paper</button>
-	</form>
-	<form action="/outcome">
-		<button class= "scissor_button" type="submit">Scissors</button>
-	</form>
-</body>
+	<head><link type="text/css" rel="stylesheet" href="stylesheet.css"/></head>
+		<body class= "icon_choice">
+			<h1 class= "main_header"> Choose your Weapon </h1>
+			<form action="/outcome">
+				<a href="/outcome">
+					<img class="rock_image" src='/images/rock-figure-color.svg'></a>
+			</form>
+			<form action="/outcome">
+				<a href="/outcome">
+					<img class="paper_image" src='/images/paper.svg'></a>
+			</form>
+				<a href="/outcome">
+					<img class="scissor_image" src='/images/Scissors.svg.png'></a>
+			</form>
+		</body>
 </html>
